[package]
name = "the-just-two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11" }
leafwing-input-manager = "0.10"
iyes_progress = "0.9"
bevy_common_assets = "0.7.0"
bevy_asset_loader = "0.17"